--- a/README
+++ b/README
@@ -9,6 +9,12 @@ cd client
 You need to install the cpr library:
 https://girishjoshi.io/post/using-cpr-for-making-http-requests-c++/ 
 
+Possible issue:
+```bash
+./bin/prog: error while loading shared libraries: libcpr.so.1: cannot open shared object file: No such file or directory
+```
+https://stackoverflow.com/questions/480764/linux-error-while-loading-shared-libraries-cannot-open-shared-object-file-no-s
+
 ### Compile 
 ```bash
 make
